# mibe

./: .gitignore  AGENTS.md  README.md  README_EN.md  config.toml.example  mibe.py  pyproject.toml
docs/: iteration-log.md
docs/logs/: 2026-02-24-codex-exec-command-escalation-confirmation.md  2026-02-25-codex-new-format-escalation-confirmation-generalization.md  2026-02-25-codex-tts-cjk-compatible-truncation.md  2026-02-25-keepalive-avoid-interrupting-speaker-playback.md
tests/: test_integration.py  test_mibe.py
